# lol-bet-strategy-tool

./: .env.example  .gitignore  README.md  pyproject.toml
data/: historical_matches.example.csv  odds_snapshots.example.csv  oracles_elixir.example.csv
docs/: automation.md  data-sources.md  odds-history-options.md  odds-recording.md
src/lol_bet_strategy/: __init__.py  cli.py  db.py  heuristics.py  importers.py  leaguepedia.py  models.py
src/lol_bet_strategy/odds_providers/: __init__.py  base.py  mock.py  odds_api_io.py
tests/: conftest.py  test_db.py  test_heuristics.py  test_importers.py  test_leaguepedia.py  test_odds_api_io_provider.py
